<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_Sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="visible"
        app:cardCornerRadius="8dp"
        app:contentPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioGroup
                android:id="@+id/radioGroupSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonSort"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/radioButtonOldest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/oldest" />

                <RadioButton
                    android:id="@+id/radioButtonNewest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/newest" />

                <RadioButton
                    android:id="@+id/radioButtonMostExpensive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/most_expensive" />

                <RadioButton
                    android:id="@+id/radioButtonLeastExpensive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/least_expensive" />

            </RadioGroup>


            <Button
                android:id="@+id/buttonSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/sort"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroupSort" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>